[project]
name = "mcp-server-feedforge"
version = "1.0.0"
description = "Turn any website into an RSS/JSON/Atom feed by monitoring for changes"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "feedgen>=1.0.0",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
playwright = ["playwright>=1.40.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project.scripts]
feedforge-api = "server:app"
feedforge-mcp = "mcp_server:main"

[tool.setuptools]
py-modules = ["server", "mcp_server", "crawler", "parser", "scheduler", "db", "feed_gen"]
